<resources>
    <string name="app_name">MyCalculatorJava</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="_equals">=</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_multiply">*</string>
    <string name="_AC">AC</string>
    <string name="_plus_minus">+/-</string>
    <string name="_del">DEL</string>
    <string name="_divide">/</string>
    <string name="Change_theme">Выбрать тему:</string>
    <string name="Standart_Theme">Стандартная</string>
    <string name="Blue_Theme">Голубая</string>
    <string name="Green_Theme">Зеленая</string>
    <string name="apply">Применить</string>
</resources>