<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/calc">


    <TextView
        android:id="@+id/mathematics_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textView_indent"
        android:layout_marginEnd="@dimen/textView_indent"
        android:gravity="end"
        android:textColor="@color/black"
        android:textSize="@dimen/result_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_AC"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/button_0"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button_2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/button_point"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:text="@string/_point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_equals"
        app:layout_constraintStart_toStartOf="@id/button_3" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonBackground1"
        android:id="@+id/button_equals"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundTint_1"
        android:text="@string/_equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_3" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/button_1"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/button_2"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_1" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/button_3"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_2" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonBackground1"
        android:id="@+id/button_plus"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundTint_1"
        android:text="@string/_plus"
        app:layout_constraintBottom_toTopOf="@id/button_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_3" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/button_4"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/button_5"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_7" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/button_6"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button_5" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonBackground1"
        android:id="@+id/button_minus"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundTint_1"
        android:text="@string/_minus"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_6" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/button_7"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/button_8"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_7" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonStyle"
        android:id="@+id/button_9"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintStart_toEndOf="@id/button_8" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonBackground1"
        android:id="@+id/button_multiply"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundTint_1"
        android:text="@string/_multiply"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_9" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonBackground2"
        android:id="@+id/button_AC"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundTint_2"
        android:text="@string/_AC"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@id/button_plus_minus"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonBackground2"
        android:id="@+id/button_plus_minus"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundTint_2"
        android:text="@string/_plus_minus"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        app:layout_constraintEnd_toStartOf="@id/button_del"
        app:layout_constraintStart_toEndOf="@id/button_AC" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_del"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundTint_2"
        android:text="@string/_del"
        android:textSize="@dimen/button_del_size"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintEnd_toStartOf="@id/button_divide"
        app:layout_constraintStart_toEndOf="@id/button_plus_minus"
        app:layout_constraintTop_toTopOf="@id/button_plus_minus" />

    <com.google.android.material.button.MaterialButton
        style="@style/myButtonBackground1"
        android:id="@+id/button_divide"
        android:layout_width="@dimen/layout_width_0"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundTint_1"
        android:text="@string/_divide"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_del" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/SetTheme"
        android:layout_width="@dimen/Button_theme_width"
        android:layout_height="@dimen/Button_theme_height"
        android:text="@string/Change_theme"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>